

RELEASE NOTES
=============


2.40.2 - July ??, 2010

    Corrected a bug in the runtime error handler that would result in entity
    existence error being reported as (internal) predicate existence errors.

    Corrected a bug where the protocols implemented by the built-in object
    "logtalk" would not be returned by the implements_protocol/2-3 built-in
    predicates.


2.40.1 - June 30, 2010

    Restored support for GNU Prolog. Requires GNU Prolog version 1.4.0 (or
    later), which provides support for the ISO Prolog predicate directive
    multifile/1.

    Improved the built-in debugger by making explicit the calls to the (\+)/1
    built-in predicate.

    Corrected a bug where a call to a local predicate would always fail when
    an object or category contains a declared but not defined non-terminal.

    Corrected a bug in the compilation of (\+)//1 calls in grammar rules.
    Thanks to Bart Demoen, Ulrich Neumerkel, and Jan Burse for driving my
    attention to this bug.

    Recognize retractall/1, ground/1, keysort/2, sort/2, and numbervars/3 as
    de facto Prolog standard built-in predicates. Calls to these predicates
    will no longer be reported when the portability flag is set to "warning".
    In addition, added syntax coloring support for these predicates.

    Recognize e/0 and pi/0 as de facto Prolog standard built-in arithmetic
    functions. Calls to these functions will no longer be reported when the
    portability flag is set to "warning". In addition, added syntax coloring
    support for these two functions.

    Updated the internal hook predicate '$lgt_tr_predicate_indicators'/2,
    used in the config files for processing proprietary Prolog directives,
    in order to translate both grammar rule non-terminal indicators and
    predicate indicators. A possible usage scenario is tabling grammar rule
    non-terminals.

    Updated the definition of the Logtalk flag "prolog_version" for Ciao in