@@ -101,7 +101,7 @@ CIAO Prolog 1.10#8
 	the goal use_module(library(system)).
 
 
-CxProlog 0.97.4 or later versions
+CxProlog 0.97.5 or later versions
 
 	cx.pl
 
