@@ -18,7 +18,7 @@ cxlgt \-- Logtalk integration script for CxProlog
 Initialization goal, written between double quotes, to be executed after Logtalk startup.
 
 .SH REQUIREMENTS
-CxProlog 0.97.4 or a later version is required.
+CxProlog 0.97.5 or a later version is required.
 
 .SH ENVIRONMENT
 .TP
