@@ -57,7 +57,7 @@ post-activate {
 	ui_msg "*"
 	ui_msg "* B-Prolog (version 7.4 or later):       bplgt"
 	ui_msg "* Ciao (version 1.10):                   ciaolgt    (first run must use sudo)"
-	ui_msg "* CxProlog (version 0.97.4 or later):    cxlgt"
+	ui_msg "* CxProlog (version 0.97.5 or later):    cxlgt"
 	ui_msg "* ECLiPSe (version 6.0 or later):        eclipselgt"
 	ui_msg "* GNU Prolog (version 1.4.0 or later):   gplgt"
 	ui_msg "* Qu-Prolog (version 8.11 or later):     qplgt"
